// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`sqitch modules can create a module plan using workspace.generateModulePlan() 1`] = `
"%syntax-version=1.0.0
%project=totp
%uri=totp
procedures/generate_secret 2017-08-11T08:11:51Z launchql <launchql@5b0c196eeb62> # add procedures/generate_secret"
`;

exports[`sqitch modules can create a module plan using workspace.generateModulePlan() w/projects 1`] = `
"%syntax-version=1.0.0
%project=totp
%uri=totp
procedures/generate_secret [pg-verify:procedures/verify_view] 2017-08-11T08:11:51Z launchql <launchql@5b0c196eeb62> # add procedures/generate_secret"
`;

exports[`sqitch modules ensures plan includes all resolved deploy steps 1`] = `
"%syntax-version=1.0.0
%project=secrets
%uri=secrets
procedures/secretfunction 2017-08-11T08:11:51Z launchql <launchql@5b0c196eeb62> # add procedures/secretfunction"
`;

exports[`sqitch modules ensures plan includes all resolved deploy steps w/projects 1`] = `
"%syntax-version=1.0.0
%project=secrets
%uri=secrets
procedures/secretfunction [totp:procedures/generate_secret pg-verify:procedures/verify_view] 2017-08-11T08:11:51Z launchql <launchql@5b0c196eeb62> # add procedures/secretfunction"
`;

exports[`sqitch modules ensures simple plan 1`] = `
"%syntax-version=1.0.0
%project=my-first
%uri=my-first
schema_myfirstapp 2017-08-11T08:11:51Z launchql <launchql@5b0c196eeb62> # add schema_myfirstapp
table_users [schema_myfirstapp] 2017-08-11T08:11:51Z launchql <launchql@5b0c196eeb62> # add table_users
table_products [schema_myfirstapp table_users] 2017-08-11T08:11:51Z launchql <launchql@5b0c196eeb62> # add table_products"
`;

exports[`sqitch modules should be able to create a plan with cross-project requires already in 1`] = `
"%syntax-version=1.0.0
%project=utils
%uri=utils
procedures/myfunction [totp:procedures/generate_secret pg-verify:procedures/verify_view] 2017-08-11T08:11:51Z launchql <launchql@5b0c196eeb62> # add procedures/myfunction"
`;
